# cli

./: CLAUDE.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  dist-workspace.toml
.github/workflows/: release.yml
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scoop/: bb.json
src/: api.rs  colors.rs  config.rs  main.rs
src/commands/: config.rs  login.rs  logout.rs  ls.rs  mod.rs  mount.rs  pull.rs  push.rs  quota.rs  share.rs  status.rs  sync.rs  watch.rs  webdav.rs  whoami.rs
