[package]
name = "beebeeb-cli"
description = "bb — Beebeeb CLI for end-to-end encrypted cloud storage"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/beebeeb-io/cli"
homepage = "https://beebeeb.io"
documentation = "https://beebeeb.io/cli"
keywords = ["encryption", "cloud-storage", "e2ee", "privacy", "cli"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "bb"
path = "src/main.rs"

[dependencies]
beebeeb-core = { git = "https://github.com/beebeeb-io/core", package = "beebeeb-core" }
beebeeb-types = { git = "https://github.com/beebeeb-io/core", package = "beebeeb-types" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
colored = "3"
dirs = "6"
uuid = { version = "1", features = ["v4", "serde"] }
rpassword = "7"
hostname = "0.4"
rand = "0.8"
base64 = "0.22"
notify = "7"
notify-debouncer-full = "0.4"
walkdir = "2"
axum = "0.7"
mime_guess = "2"
fuser = { version = "0.14", optional = true }
libc = "0.2"

[features]
# Enable the FUSE filesystem mount command.
# Requires macFUSE on macOS: brew install macfuse (reboot required).
# Requires libfuse3-dev on Linux: apt install libfuse3-dev.
fuse = ["dep:fuser"]

[patch."https://github.com/beebeeb-io/core"]
beebeeb-core = { path = "../core/beebeeb-core" }
beebeeb-types = { path = "../core/beebeeb-types" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
